--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta name="description" content="Check RCIT Result of all semesters online. Get latest updates on Ramchandra Chandravanshi Institute of Technology results.">
+<meta name="keywords" content="RCIT, RCIT Result, Ramchandra Chandravanshi Institute of Technology, RCIT Palamu Result, RCIT 2025 result">
 <meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html lang="en">
 <head>
