--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<meta name="description" content="Check RCIT Result of all semesters online. Get latest updates on Ramchandra Chandravanshi Institute of Technology results.">
-<meta name="keywords" content="RCIT, RCIT Result, Ramchandra Chandravanshi Institute of Technology, RCIT Palamu Result, RCIT 2025 result">
+<meta name="description" content="Check RCIT Result of all semesters online. Get latest updates on Ramchandra Chandravansi Institute of Technology results.">
+<meta name="keywords" content="RCIT, RCIT Result, Ramchandra Chandravansi Institute of Technology, RCIT Palamu Result, RCIT 2025 result">
 <meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RCIT Result - Ramchandra Chandravanshi Institute of Technology</title>
+  <title>RCIT Result - Ramchandra Chandravansi Institute of Technology</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -962,7 +962,7 @@ document.getElementById("resultForm").addEventListener("submit", function(e) {
     let resultHtml = `
      <img src="logo.png" alt="RC University Logo" style="display:block; margin:auto; width:120px; margin-bottom:10px;">
       <h2 style="text-align:center;">RCIT RESULT</h2>
-      <h3 style="text-align:center;">RAMCHANDRA CHANDRAVANSHI INSTITUTE OF TECHNOLOGY</h3>
+      <h3 style="text-align:center;">RAMCHANDRA CHANDRAVANSI INSTITUTE OF TECHNOLOGY</h3>
       <p><strong>Roll No:</strong> ${student.rollNo}</p>
       <p><strong>Registration No:</strong> ${student.registrationNo}</p>
       <p><strong>Name:</strong> ${student.name}</p>
